--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,7 +1,8 @@
 .container {
   display: flex;
   justify-content: space-between;
-  background-color: lightpink;
+  background-color: lightyellow;
+  height: 100px;
 }
 
 .leftSide {
