--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,8 +1,16 @@
 .container {
+  height: 100px;
+  width: 100%;
+  background-color: lightpink;
+  height: 100px;
+}
+
+.footer {
+  margin: 0 auto;
+  width: 1140px;
   display: flex;
   justify-content: space-between;
-  background-color: lightpink;
-  height: 75px;
+  align-items: center;
 }
 
 .leftSide {
