--- a/src/pages/Homepage.module.css
+++ b/src/pages/Homepage.module.css
@@ -1,3 +1,13 @@
 .container {
+  width: 100%;
   background-color: lightblue;
+  /* height: auto; */
+}
+
+.content {
+  margin: 0 auto;
+  width: 1140px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
