Updated header styling, logo

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,8 +1,9 @@
 .container {
   height: 100px;
   width: 100%;
-  background-color: lightpink;
+  background-color: darkgreen;
   height: 100px;
+  color: white;
 }
 
 .footer {
