--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,12 +1,14 @@
 .container {
-  background-color: lightyellow;
-  height: 100px;
+  background-color: #00bf63;
+  height: 150px;
   width: 100%;
+  display: flex;
 }
 
 .header {
   margin: 0 auto;
   width: 1380px;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -19,6 +21,30 @@
 }
 
 .headerLinks {
-  background-color: grey;
+  /* background-color: grey; */
+  margin: 5px 25px;
+  color: white;
+  text-decoration: none;
+  text-emphasis: bold;
+  font-size: 24px;
+}
+
+.logoContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* height: 125px; */
+  width: 140px;
+  overflow: hidden;
+}
+
+#logo {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.rightSide {
+  display: flex;
   margin: 5px;
 }
