--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,8 +1,7 @@
 .container {
-  height: 100px;
+  height: 300px;
   width: 100%;
   background-color: darkgreen;
-  height: 100px;
   color: white;
 }
 
@@ -16,4 +15,35 @@
 
 .leftSide {
   display: flex;
+}
+
+.logoContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* height: 125px; */
+  width: 140px;
+  overflow: hidden;
+}
+
+#logo {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.rightSide {
+  display: flex;
+  width: 100%;
+  align-items: top;
+  justify-content: center;
+}
+
+.footerColumn > h3,
+.footerColumn > ul {
+  list-style-type: none;
+}
+
+.footerColumn {
+  margin: 20px;
 }
