--- a/src/pages/Category1Page.module.css
+++ b/src/pages/Category1Page.module.css
@@ -1,13 +1,23 @@
 .container {
-  width: 100%;
-  background-color: blue;
-  /* height: 100%; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  background-color: white;
+  min-height: 500px;
+  padding: 20px;
+  justify-items: center;
+  width: 1140px;
+  align-self: center;
+  gap: 20px;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #cbf3e0;
 }
 
 .content {
   margin: 0 auto;
   width: 1140px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
