--- a/src/components/ProductCard.module.css
+++ b/src/components/ProductCard.module.css
@@ -1,19 +1,41 @@
+h3 {
+  padding: 0;
+  margin: 0;
+}
 .container {
-  height: 300px;
-  width: 200px;
+  height: 400px;
+  width: 300px;
   background-color: darkgrey;
   display: flex;
+  flex-direction: column;
+  /* align-items: top; */
+  justify-content: top;
 }
 
 .imageContainer {
-  height: 200px;
-  width: 200px;
+  height: 300px;
+  width: 300px;
   background-color: grey;
-  padding: 10px;
+  padding: 5px 0px;
 }
 
 img {
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+.infoContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: top;
+  padding: 5px;
+}
+
+.itemName {
+  font-size: 0.8em;
+}
+
+.itemPrice {
+  font-size: 1em;
 }
