--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -2,6 +2,8 @@
   background-color: #00773e;
   height: 50px;
   width: 100%;
+  border-top: 1px solid white;
+  border-bottom: 2px solid white;
 }
 
 .content {
