--- a/src/pages/ProductPage.module.css
+++ b/src/pages/ProductPage.module.css
@@ -16,7 +16,8 @@
 }
 
 .productDetails {
-  display: flex;
+  display: grid;
+  grid-template-columns: 0.8fr 1.2fr;
   background-color: lightgrey;
   min-height: 500px;
   padding: 20px;
@@ -32,14 +33,19 @@
   background-color: white;
 }
 
+.leftContainer > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 .rightContainer {
   display: flex;
   flex-direction: column;
   padding: 0px 10px;
 }
 
-img {
+.rightContainer > button {
+  height: 50px;
   width: 100%;
-  height: 100%;
-  object-fit: contain;
 }
