--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+
 #root {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
 }
