--- a/src/pages/Homepage.module.css
+++ b/src/pages/Homepage.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  background-color: lightblue;
+  background-color: #2da752;
   /* height: auto; */
 }
 
@@ -10,4 +10,33 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.homeBannerContainer {
+  background: linear-gradient(
+      to right,
+      rgba(0, 50, 0, 0.8),
+      rgba(0, 50, 0, 0.5),
+      rgba(0, 50, 0, 0)
+    ),
+    url("../assets/homeBanner.webp") no-repeat center/cover;
+  height: auto;
+  width: 100%;
+  height: 600px;
+  display: flex;
+  align-items: center;
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.homeBannerText {
+  padding: 10px;
+  color: white;
+  width: 33%;
+  font-size: 2rem;
+  font-weight: bolder;
 }
