--- a/src/components/CartFlyout.module.css
+++ b/src/components/CartFlyout.module.css
@@ -131,3 +131,12 @@
 .cartItems > table > tbody > tr > td:nth-child(7) {
   width: 5%;
 }
+
+.cartOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: calc(100%-400px);
+  height: 100%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+}
