Added on hover styling to content

--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -38,3 +38,12 @@
 .headerIcons {
   color: white;
 }
+
+.headerLinks:hover,
+#phoneNumber:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 4px;
+}
+
+ {
+}
