--- a/src/components/ProductCard.module.css
+++ b/src/components/ProductCard.module.css
@@ -2,6 +2,7 @@ h3 {
   padding: 0;
   margin: 0;
 }
+
 .container {
   height: 400px;
   width: 300px;
@@ -38,4 +39,17 @@ img {
 
 .itemPrice {
   font-size: 1em;
+}
+
+.itemName,
+.itemPrice {
+  text-decoration: none;
+  color: darkgreen;
+}
+
+/* still not working */
+.itemName:visited,
+.itemPrice:visited {
+  color: inherit;
+  text-decoration: none;
 }
